fix: change z-index for map to display menu properly

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -151,6 +151,13 @@ body {
 .main-container {
 	width: 100%;
 	height: 100vh;
+
+	
+}
+
+#map {
+    height: 100vh;
+    z-index: 50;
 }
 
 //footer
