--- a/style/style.css
+++ b/style/style.css
@@ -127,6 +127,11 @@ body {
   height: 100vh;
 }
 
+#map {
+  height: 100vh;
+  z-index: 50;
+}
+
 .footer {
   width: 100%;
   height: 100px;
